@@ -78,7 +78,7 @@ connect-allow-ip = 127.0.0.1
 group = smsbox
 bearerbox-host = localhost
 sendsms-port = 13013
-#global-sender = 13013
+global-sender = 13013
 #sendsms-chars = "0123456789 +-"
 #log-file = "/tmp/smsbox.log"
 #log-level = 0
